--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,50 @@
 <resources>
     <string name="app_name">Oye Oye!</string>
 
+    <string name="masterpass_html">
+        [<![CDATA[
+
+<html>
+<head>
+    <script type="text/javascript"
+            src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://www.simplify.com/commerce/v1/simplify.js"></script>
+
+    <script type="text/javascript"
+            src="https://www.simplify.com/commerce/simplify.pay.js"></script>
+    <script>
+    SimplifyCommerce.hostedPayments(
+        function(response) {
+            console.log(\'DONE DONE\');
+            window.alert(response.cardToken);
+        },
+        {
+            scKey: "sbpb_YzlhZWZjMTEtMmE4Zi00NjMzLTk3YWYtYjNiYzU0MDdmZDBi",
+            color: "#12B830",
+            masterpass: true,
+            operation: \'create.token\',
+        }
+    );
+
+    $(document).ready(function() {
+        window.location = "https://www.simplify.com/commerce/masterPass/index?key=sbpb_YzlhZWZjMTEtMmE4Zi00NjMzLTk3YWYtYjNiYzU0MDdmZDBi&token=";
+    });
+</script>
+</head>
+
+<body>
+
+<iframe name="my-hosted-form"
+        data-sc-key="sbpb_YzlhZWZjMTEtMmE4Zi00NjMzLTk3YWYtYjNiYzU0MDdmZDBi"
+        data-color="#12B830"
+        data-amount="%1$s"
+        data-operation=\'create.token\'
+        masterpass="true"
+        style="display:none">
+</iframe>
+</body>
+</html>
+
+        ]]>
+    </string>
 </resources>
