--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Oye Oye!</string>
+    <string name="app_name">Oyez Oyez!</string>
 
     <string name="masterpass_html">
         [<![CDATA[
